GC Dental/src/objects/SalesOrder__c.object
<CustomObject>
    <fields>
        <fullName>Campaign_SalesOrder__c</fullName>
        <label>Campaign SalesOrder</label>
        <summarizedField>Sales_Order_Line_Items__c.Total_Product_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Sales_Order_Line_Items__c.Product_From__c</field>
            <operation>equals</operation>
            <value>Campaign Products</value>
        </summaryFilterItems>
        <summaryForeignKey>Sales_Order_Line_Items__c.SalesOrder__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select only active campaigns.</errorMessage>
            <filterItems>
                <field>Campaign__c.isActive__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>List of Active Campaigns</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Campaign__c</referenceTo>
        <relationshipLabel>Sales Orders</relationshipLabel>
        <relationshipName>Sales_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sales Orders</relationshipLabel>
        <relationshipName>SalesOrders</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Dealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealer</label>
        <referenceTo>Dealer__c</referenceTo>
        <relationshipLabel>Sales Orders</relationshipLabel>
        <relationshipName>SalesOrders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Demo_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Demo Product</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select the active demo products.</errorMessage>
            <filterItems>
                <field>Demo_Product__c.is_active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Please select the active demo products.Please start the search with &quot;  D-  &quot;</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Demo_Product__c</referenceTo>
        <relationshipLabel>Sales Orders</relationshipLabel>
        <relationshipName>Sales_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Demo_Products_Sales_Order__c</fullName>
        <label>Demo Products Sales Order</label>
        <summarizedField>Sales_Order_Line_Items__c.Order_Quantity__c</summarizedField>
        <summaryFilterItems>
            <field>Sales_Order_Line_Items__c.Product_From__c</field>
            <operation>equals</operation>
            <value>Demo Products</value>
        </summaryFilterItems>
        <summaryForeignKey>Sales_Order_Line_Items__c.SalesOrder__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Only_SalesOrder_Amount__c</fullName>
        <label>Only SalesOrder Amount</label>
        <summarizedField>Sales_Order_Line_Items__c.Total_Product_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Sales_Order_Line_Items__c.Product_From__c</field>
            <operation>equals</operation>
            <value>Sales Order</value>
        </summaryFilterItems>
        <summaryForeignKey>Sales_Order_Line_Items__c.SalesOrder__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Order_Type__c</fullName>
        <label>Order Type</label>
        <picklist>
            <picklistValues>
                <fullName>Received a call from Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I have called the Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I have visited the Customer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SalesOrder_Amount__c</fullName>
        <label>SalesOrder Amount</label>
        <summarizedField>Sales_Order_Line_Items__c.Total_Product_Amount__c</summarizedField>
        <summaryForeignKey>Sales_Order_Line_Items__c.SalesOrder__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Working_with__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Working with</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select active User.</errorMessage>
            <filterItems>
                <field>$User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Active Users</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>SalesOrders</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Sales Order</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>Close_Date__c</columns>
        <columns>Dealer__c</columns>
        <columns>Working_with__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>This_Month</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>Close_Date__c</columns>
        <columns>Dealer__c</columns>
        <columns>Working_with__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Close_Date__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>This Month</label>
    </listViews>
    <nameField>
        <displayFormat>SO-{00000}</displayFormat>
        <label>Sales Order No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>